--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "etag": "^1.8.1",
     "html-minifier": "^4.0.0",
     "recrawl-sync": "^2.0.0",
-    "rollup-plugin-esbuild": "^2.5.2",
+    "rollup-plugin-esbuild": "link:@cush/rollup-plugin-esbuild@2.5.2-canary.138",
     "rollup-plugin-terser": "^7.0.2",
     "strip-bom": "^4.0.0"
   },
