--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "recrawl-sync": "^2.0.0",
     "rollup-plugin-esbuild": "npm:@cush/rollup-plugin-esbuild@2.5.2-canary.138",
     "rollup-plugin-terser": "^7.0.2",
-    "strip-bom": "^4.0.0"
+    "strip-bom": "^4.0.0",
+    "toml": "^3.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^6.1.0",
