--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "etag": "^1.8.1",
     "html-minifier": "^4.0.0",
     "recrawl-sync": "^2.0.0",
+    "rollup": "^2.35.1",
     "rollup-plugin-esbuild": "npm:@cush/rollup-plugin-esbuild@2.5.2-canary.138",
     "rollup-plugin-terser": "^7.0.2",
     "strip-bom": "^4.0.0",
@@ -37,7 +38,6 @@
     "@rollup/plugin-typescript": "^6.1.0",
     "@types/etag": "^1.8.0",
     "prettier": "^2.0.5",
-    "rollup": "2.33.1",
     "rollup-plugin-dts": "^1.4.10",
     "typescript": "^4.0.0",
     "vite": "latest"
