--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prepare": "yarn build"
   },
   "peerDependencies": {
-    "vite": "*"
+    "vite": ">=2"
   },
   "dependencies": {
     "@cloudflare/workers-types": "^2.1.0",
